--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:greenyellow;
-    border: 1px solid black;
+    background-color:#adff2f;
     text-align: center;
     color: black;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
