--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@
 }
 
 .botaoDestaques, .botaoContato, .botaoSobre {
+    max-width: 101px;
+    min-width: none;
     font-family: Arial, Helvetica, sans-serif;
     color: greenyellow;
     height: 7vh;
