--- a/css/noticia1.css
+++ b/css/noticia1.css
@@ -61,6 +61,7 @@
     max-width: 100vw;
     text-align: center;
     padding: 20px;
+    padding-bottom: 5px;
     display: flex;
     justify-content: center;
 }
